# text2ics

./: .gitignore  README.md  app.py  flake.nix  pyproject.toml  requirements.txt  test_import.py
app/: app.py  state.py  style.py  ui.py  utils.py
text2ics/: __init__.py  __main__.py  cli.py  converter.py  hello.py  system_prompt.py
